1.7.6.0/_sources/Reference/NodeReference/GafferScene/Render.md.txt
Render
======

Performs offline batch rendering using any of the
available renderer backends, or optionally writes
scene descriptions to disk for later rendering via
a SystemCommand node.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

preTasks
--------

Input connections to upstream nodes which must be
executed before this node.

postTasks
---------

Input connections to nodes which must be
executed after this node, but which don't
need to be executed before downstream nodes.

task
----

Output connections to downstream nodes which must
not be executed until after this node.

dispatcher
----------

Container for custom plugs which dispatchers use to
control their behaviour.

dispatcher.batchSize
--------------------

Maximum number of frames to batch together when dispatching tasks.
If the node requires sequence execution `batchSize` will be ignored.

dispatcher.immediate
--------------------

Causes this node to be executed immediately upon dispatch,
rather than have its execution be scheduled normally by
the dispatcher. For instance, when using the LocalDispatcher,
the node will be executed immediately in the dispatching process
and not in a background process as usual.

When a node is made immediate, all upstream nodes are automatically
considered to be immediate too, regardless of their settings.

dispatcher.tractor
------------------

Settings that control how tasks are
dispatched to Tractor.

dispatcher.tractor.service
--------------------------

A Tractor "service key expression" used to select
blades on which tasks will be executed.

dispatcher.tractor.tags
-----------------------

A space separated list of tags that can be
used with Tractor's limits to constrain
the number of concurrent tasks. Typically this is
used to ensure that tasks using commercial
software do not exceed the available license
count.

in
--

The scene to be rendered.

renderer
--------

The renderer to use. Default mode uses the `render:defaultRenderer` option from
the input scene globals to choose the renderer. This can be authored using
the StandardOptions node.

mode
----

The type of render to perform.

fileName
--------

The name of the file to be generated when in scene description mode.

out
---

A direct pass-through of the input scene.

resolvedRenderer
----------------

The renderer that will be used, accounting for the value of the
`render:defaultRenderer` option if `renderer` is set to "Default".